# handwriting-json

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  ROADMAP.md
examples/: README.md  clinic_intake_schema.json  donation_form_schema.json  field_inspection_schema.json  form_schema.json  prescription_schema.json  school_permission_slip_schema.json  signup_form_schema.json
handwriting_json/: __init__.py  __main__.py  cli.py  errors.py  extract.py  models.py
handwriting_json/inputs/: __init__.py  normalizer.py
handwriting_json/prompts/: __init__.py  default.py  prescription.py
handwriting_json/providers/: __init__.py  base.py  litellm_provider.py
handwriting_json/schemas/: __init__.py  detection.py
marketing/: linkedin_launch_post.md  preetam_dev_handover.md  technical_deep_dive_outline.md
tests/: test_cli.py  test_extract.py  test_inputs.py  test_prescription_prompt.py  test_schema_prompt.py
