[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handwriting-json"
version = "0.1.0"
description = "Convert handwritten documents into structured JSON with vision LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Preetam Ramdhave" }
]
keywords = [
  "document-ai",
  "handwriting-recognition",
  "llm",
  "json-extraction",
  "vision-language-models"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27.0",
  "jsonschema>=4.22.0",
  "litellm>=1.40.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
handwriting-json = "handwriting_json.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["handwriting_json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
